--- a/blog.css
+++ b/blog.css
@@ -102,10 +102,12 @@ a:hover {
     background-color: #fbf7f1;
     border-radius: 30px;
     border: 2px solid #584738;
-    padding: 20px 10px 25px 50px;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     font-size: 20px; 
     line-height: 1.6;
-    max-width: 300px;
+    width: 300px;
 }
 
 .update > li a {
