--- a/blog.css
+++ b/blog.css
@@ -47,6 +47,7 @@ a:hover {
     border-left: #cecece solid 3px;
     padding-left: 7px;
     padding-right: 40px;
+    line-height: 2.0;
 }
 
 /* 主页 */
